...
];

const Component = () => {
  const {props, actions} = useSettlement();

  return (
    <Screen testID="SettlementScreen">
      <Preview
        height="240px"
        testID="Preview"
        uri={props.preview?.imageUrl}
        imageHeight="360px"
      />
      <ScrollView
        showsVerticalScrollIndicator={false}
        testID="SettlementScreen.ScrollView">
        <List.Section>
          <List.Item
            testID="Principles"
            title="Principles"
            right={itemProps => (
              <>
...
        <List.Section>
          <List.Item
            title="Weapon Specialization"
            right={itemProps => (
              <>
                <IconButton
                  testID="WeaponSpecializationResetButton"
                  {...itemProps}
                  icon="sync"
                  onPress={actions.weaponSpecializationReset}
                />
                <IconButton
                  testID="WeaponSpecializationRemoveButton"
                  {...itemProps}
                  icon="delete"
                  onPress={actions.weaponSpecializationRemove}
                />
                <IconButton
                  testID="WeaponSpecializationAddButton"
                  {...itemProps}
                  icon="plus"
                  onPress={actions.weaponSpecializationAdd}
                />
              </>
            )}
...
