import {createMaterialBottomTabNavigator} from '@react-navigation/material-bottom-tabs';
import {createMaterialTopTabNavigator} from '@react-navigation/material-top-tabs';
import {NavigationContainer} from '@react-navigation/native';
import {createStackNavigator} from '@react-navigation/stack';
import {
  GearSelectScreen,
  InnovationSelectScreen,
  LocationSelectScreen,
  PrincipleSelectScreen,
  SettlementScreen,
  SurvivorsScreen,
  WeaponSpecializationSelectScreen,
} from '@screens';
import {store} from '@store';
import React from 'react';
import 'react-native-gesture-handler';
import {Provider as PaperProvider} from 'react-native-paper';
import Icon from 'react-native-vector-icons/MaterialCommunityIcons';
...
      labeled={false}
      activeColor="#000"
      barStyle={WHITE_BACKGROUND_STYLE}>
      <Tab.Screen
        options={{
          tabBarIcon: getTabBarIcon('fireplace'),
          tabBarTestID: 'SettlementBottomTab',
        }}
        name="SettlementTab"
        component={SettlementTab}
      />
      <Tab.Screen
        options={{
          tabBarIcon: getTabBarIcon('human'),
          tabBarTestID: 'SurvivorsBottomTab',
        }}
        name="SurvivorsTab"
        component={SurvivorsTab}
      />
    </Tab.Navigator>
  );
...
