...
const FooterButton = ({confirm, cancel}: Props) => (
  <Footer>
    <Button mode="outlined" onPress={cancel}>
      CANCEL
    </Button>
    <Button mode="contained" onPress={confirm}>
      CONFIRM
    </Button>
  </Footer>
);

export default FooterButton;

...
