...
  {
    id: 'Axe Proficiency',
    name: 'Axe Proficiency',
    imageUrl: 'https://imgur.com/iLrqViR.png',
  },
  {
    id: 'Axe Mastery',
    name: 'Axe Mastery',
    imageUrl: 'https://imgur.com/EpZtPJ2.png',
  },
  {
    id: 'Bow Proficiency',
    name: 'Bow Proficiency',
...
