...
const LOCATIONS = [
  {
    title: 'Starting',
    data: [
      {
        id: 'cloth',
        name: 'Cloth',
        imageUrl: 'https://imgur.com/9jQc0IC.png',
        typeId: 'gear',
      },
      {
        id: 'foundingStone',
        name: 'Founding Stone',
...
